# snyk-org-slackbot

./: .gitignore  Dockerfile  README.md  pyproject.toml  settings.yaml.example
.github/: CONTRIBUTING.md
.github/workflows/: docker-image.yml
chart/: Chart.yaml  values.yaml
chart/templates/: _helpers.tpl  configmap.yaml  deployment.yaml  secret.yaml
docs/: customization.md  settings_yaml.md  slack_app.md
snyk_slackbot/: api.py  main.py  settings.py
snyk_slackbot/tests/: test_api.py
templates/blocks/: create_confirm.json  org_created.json  sso_confirm.json
templates/messages/: org_creation.yaml
templates/views/: create_org_modal.json
